force-app/main/default/objects/Attendee__c/fields/Attendee_Pass__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Pass__c</fullName>
    <label>Attendee Pass</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>