force-app/main/default/objects/Attendee__c/fields/Event_Logo__c.field-meta.xml
<CustomField>
    <fullName>Event_Logo__c</fullName>
    <formula>Event__r.Logo_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Logo</label>
    <type>Text</type>
</CustomField>