force-app/main/default/objects/Attendee__c/fields/Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Title__c</fullName>
    <formula>Event__r.Event_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Title</label>
    <type>Text</type>
</CustomField>